--- a/resources/lang/it_IT.xml
+++ b/resources/lang/it_IT.xml
@@ -132,6 +132,11 @@
     <translation key="settings_keyboard_layout">Layout Tastiera</translation>
     <translation key="settings_pause_key">Tasto Pausa</translation>
 
+    <translation key="settings_speed_change_title">Cambio Velocità Durante la Riproduzione</translation>
+    <translation key="settings_speed_change_enable_hint">Abilita cambio velocità durante la riproduzione utilizzando scorciatoie da tastiera</translation>
+    <translation key="settings_speed_change_preset_keys">Tasti Preimpostati</translation>
+    <translation key="settings_speed_change_ramp_steps">Passi di Transizione Velocità</translation>
+
     <!-- ================= -->
     <!-- Buttons -->
     <!-- ================= -->
