--- a/resources/lang/pl_PL.xml
+++ b/resources/lang/pl_PL.xml
@@ -132,6 +132,11 @@
     <translation key="settings_keyboard_layout">Układ Klawiatury</translation>
     <translation key="settings_pause_key">Klawisz Pauzy</translation>
 
+    <translation key="settings_speed_change_title">Zmiana prędkości podczas odtwarzania</translation>
+    <translation key="settings_speed_change_enable_hint">Włącz zmianę prędkości podczas odtwarzania za pomocą skrótów klawiaturowych</translation>
+    <translation key="settings_speed_change_preset_keys">Klawisze presetów</translation>
+    <translation key="settings_speed_change_ramp_steps">Kroki przejścia prędkości</translation>
+
     <!-- ================= -->
     <!-- Buttons -->
     <!-- ================= -->
